VEIIA-41 create endpoints for auth service: added work with db finally
