# internal/domain/user/types.go
@@ -8,6 +8,18 @@ type User struct {
 	Email    string `json:"email" binding:"required"`
 }
 
+type UserSignUp struct {
+	Name     string `json:"name" binding:"required"`
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	Email    string `json:"email" binding:"required"`
+}
+
+type UserSignIn struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
 type UserIdResponse struct {
 	Id int `json:"id"`
 }
