# internal/handlers/user/user.go
@@ -3,6 +3,7 @@ package user
 import (
 	"github.com/gin-gonic/gin"
 	userModel "github.com/syth0le/authorization-BE/internal/domain/user"
+	"github.com/syth0le/authorization-BE/internal/repository"
 	"github.com/syth0le/authorization-BE/pkg/utils"
 	"net/http"
 )
@@ -13,17 +14,16 @@ func signUp(c *gin.Context) {
 		utils.NewErrorResponse(c, http.StatusBadRequest, err.Error())
 	}
 
-	//id, err := authCreateUser(input)
-	id := 1
-	//if err != nil {
-	//	utils.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
-	//}
+	id, err := repository.CreateUser(input)
+	if err != nil {
+		utils.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+	}
 	response := userModel.UserIdResponse{Id: id}
 	c.JSON(http.StatusOK, response)
 }
 
 func signIn(c *gin.Context) {
-	var input userModel.User
+	var input userModel.UserSignIn
 	if err := c.BindJSON(&input); err != nil {
 		utils.NewErrorResponse(c, http.StatusBadRequest, err.Error())
 	}
